--- a/fosssite/templates/fosssite/login.html
+++ b/fosssite/templates/fosssite/login.html
@@ -2,9 +2,13 @@
 {%load staticfiles%}
 
 {% block profile %}
-<li><a href="{% url 'fosssite:UserFormView'%}"><span class="glyphicon glyphicon-user"></span>Sign Up</a></li>
+  <li class="main-nav-link">
+    <a class="nav-link" href="{% url 'fosssite:UserFormView'%}">
+    <span class="glyphicon glyphicon-user"></span>SIGN UP</a>
+  </li>
 {% endblock %}
-
+{%block image%}
+{% endblock %}
 
 {% block content %}
 <div id="wrapper">
