--- a/fosssite/static/css/style.css
+++ b/fosssite/static/css/style.css
@@ -62,30 +62,58 @@ html, body {
 body {
 	margin: 0 auto;
 	padding: 0 auto;
-	font-family: Lucida Grande,Lucida Sans Unicode,Lucida Sans,Geneva,Verdana,sans-serif;
-	color: #777;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	color: #555;
 	font-weight:300;
-	font-size: 16px;
+	font-size: 15px;
 }
 #wrapper {
 	margin: 70px auto;
-	width: 575px;
-	height:600px;
-	background: #E6E6E6;
+    margin-top: 100px;
+	width: 400px;
+	height:650px;
+	background: #F0F0F0;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	-o-border-radius: 5px;
 	-ms-border-radius: 5px;
 	border-radius: 5px;
 	padding: 30px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .join {
-	color: #222;
-	font-size: 40px;
-	font-weight:700;
+	color: #ff6600;
+	font-size: 30px;
+	font-weight:500;
 	float: left;
-	text-shadow: 1px 0 1px #777;
+	
+
+}
+.btn{
+  height:50px;
+  width:50%;
+  text-align: center;
+  vertical-align: middle;
+  border-radius: 4px;
+    moz-border-radius: 4px;
+    webkit-border-radius: 4px;
+  padding:20px;
+  margin-top: 30px;
+  margin-left: 50px;
+  margin-bottom:20px;
+  background-color:#d6d6c2;
+  color:#ff6600;
+  font-weight:bold;
+  font-size: 12pt;
+  transition:background .4s;
+  cursor:pointer;
+}
+
+.btn:hover{
+  background:#ffe0cc;
+  color:#ff6600;
+  
 }
 .lock {
 	float: right;
@@ -100,140 +128,6 @@ body {
 	margin-bottom: 25px;
 }
 
-.twitter {
-    display: inline-block;
-    text-align: center;
-    vertical-align: middle;
-	width: 160px;
-	height:50px;
-	padding-top: 10px;
-    border: 0px solid #178bb6;
-    border-radius: 8px;
-    background: #992828;
-    background: -webkit-gradient(linear, left top, left bottom, from(#1daee3), to(#1daee3));
-    background: -moz-linear-gradient(top, #1daee3, #1daee3);
-    background: linear-gradient(to bottom, #1daee3, #1daee3);
-    font-family: 'Open Sans', sans-serif;
-	font-weight:700;
-    color: #ffffff;
-    text-decoration: none;
-	margin-right: 10px;
-}
-.twitter:hover,
-.twitter:focus {
-    background: #1ca4d6;
-    color: #ffffff;
-    text-decoration: none;
-}
-.twitter:active {
-    background: #1ca4d6;
-}
-.twitter:before{
-    content:  "\0000a0";
-    display: inline-block;
-    height: 50px;
-    width: 45px;
-    line-height: 24px;
-    margin: 0 4px -6px -4px;
-    position: relative;
-	padding-left: 10px;
-    top: -10px;
-    left: -21px;
-    background: url("http://i.imgur.com/2ATElSK.png") no-repeat center center #1ca4d6;
-    background-size: 29px 24px;
-	-webkit-border-radius: 8px 0px 0px 8px;
-	-moz-border-radius: 8px 0px 0px 8px;
-	-o-border-radius: 8px 0px 0px 8px;
-	-ms-border-radius: 8px 0px 0px 8px;
-	border-radius: 8px 0px 0px 8px;
-}
-.facebook {
-    display: inline-block;
-    text-align: center;
-    vertical-align: middle;
-	width: 160px;
-	height:50px;
-	padding-top: 10px;
-    border: 0px solid #178bb6;
-    border-radius: 8px;
-    background: #3b5998;
-    font-family: 'Open Sans', sans-serif;
-	font-weight:700;
-    color: #ffffff;
-    text-decoration: none;
-	margin-right: 10px;
-}
-.facebook:hover,
-.facebook:focus {
-    background: #37528c;
-    color: #ffffff;
-    text-decoration: none;
-}
-.facebook:active {
-    background: #1ca4d6;
-}
-.facebook:before{
-    content:  "\0000a0";
-    display: inline-block;
-    height: 50px;
-    width: 50px;
-    line-height: 24px;
-    margin: 0 4px -6px -4px;
-    position: relative;
-	padding-left: 10px;
-    top: -10px;
-    left: -10px;
-    background: url("http://i.imgur.com/0bcxkOD.png") no-repeat center center #37528c;
-    background-size: 13px 24px;
-	-webkit-border-radius: 8px 0px 0px 8px;
-	-moz-border-radius: 8px 0px 0px 8px;
-	-o-border-radius: 8px 0px 0px 8px;
-	-ms-border-radius: 8px 0px 0px 8px;
-	border-radius: 8px 0px 0px 8px;
-}
-.google {
-    display: inline-block;
-    text-align: center;
-    vertical-align: middle;
-	width: 160px;
-	height:50px;
-	padding-top: 10px;
-    border: 0px solid #178bb6;
-    border-radius: 8px;
-    background: #d34836;
-    font-family: 'Open Sans', sans-serif;
-	font-weight:700;
-    color: #ffffff;
-    text-decoration: none;
-}
-.google:hover,
-.google:focus {
-    background: #c74534;
-    color: #ffffff;
-    text-decoration: none;
-}
-.google:active {
-    background: #1ca4d6;
-}
-.google:before{
-    content:  "\0000a0";
-    display: inline-block;
-    height: 50px;
-    width: 45px;
-    line-height: 24px;
-    margin: 0 4px -6px -4px;
-    position: relative;
-	padding-left: 10px;
-    top: -10px;
-    left: -15px;
-    background: url("http://i.imgur.com/GxFF74f.png") no-repeat center center #c74534;
-    background-size: 24px 24px;
-	-webkit-border-radius: 8px 0px 0px 8px;
-	-moz-border-radius: 8px 0px 0px 8px;
-	-o-border-radius: 8px 0px 0px 8px;
-	-ms-border-radius: 8px 0px 0px 8px;
-	border-radius: 8px 0px 0px 8px;
-}
 
 .clr hr {
 	border: 1px solid #e9e9e9;
@@ -257,74 +151,69 @@ body {
 	margin-bottom: 15px;
 }
 .forms input:focus {
-    box-shadow: 0 0 5px rgba(48, 168, 218, 1);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     -webkit-box-shadow: 0 0 5px rgba(48, 168, 218, 1);
     -moz-box-shadow: 0 0 5px rgba(48, 168, 218, 1);
     border:1px solid rgba(48, 168, 218, 1) !important;
 }
-.forms #username {
-	background:url("http://i.imgur.com/n6engUt.png") no-repeat left center;
-	background-position: 10px 5px;
-	border-right: 1px solid #f1f1f1;
+
+.forms #fname {
+    width:67%;
+    padding:15px 15px 15px 8px;
+    border-radius:5px;
+    box-shadow:inset 4px 6px 10px -4px rgba(0,0,0,0.3), 0 1px 1px -1px rgba(255,255,255,0.3);
+    background:rgba(0,0,0,0);
+    @include disable;
+    border:1px solid rgba(0,0,0,1);
+    margin-bottom:10px;
+    color:#ff6600;
+    font-size: 15px;
 }
-.forms #mail {
-	background:url("http://i.imgur.com/xCWr97f.png") no-repeat left center;
-	background-position: 10px 10px;
-	border-right: 1px solid #f1f1f1;
+.forms #lname {
+    width:67%;
+    padding:15px 15px 15px 8px;
+    border-radius:5px;
+    box-shadow:inset 4px 6px 10px -4px rgba(0,0,0,0.3), 0 1px 1px -1px rgba(255,255,255,0.3);
+    background:rgba(0,0,0,0);
+    @include disable;
+    border:1px solid rgba(0,0,0,1);
+    margin-bottom:10px;
+    color:#ff6600;
+    font-size: 15px;
+}
+.forms #username{
+    width:67%;
+    padding:15px 15px 15px 8px;
+    border-radius:5px;
+    box-shadow:inset 4px 6px 10px -4px rgba(0,0,0,0.3), 0 1px 1px -1px rgba(255,255,255,0.3);
+    background:rgba(0,0,0,0);
+    @include disable;
+    border:1px solid rgba(0,0,0,1);
+    margin-bottom:10px;
+    color:#ff6600;
+    font-size: 15px;
+}
+.forms #mail{
+    width:67%;
+    padding:15px 15px 15px 8px;
+    border-radius:5px;
+    box-shadow:inset 4px 6px 10px -4px rgba(0,0,0,0.3), 0 1px 1px -1px rgba(255,255,255,0.3);
+    background:rgba(0,0,0,0);
+    @include disable;
+    border:1px solid rgba(0,0,0,1);
+    margin-bottom:10px;
+    color:#ff6600;
+    font-size: 15px;
 }
 .forms #password {
-	background:url("http://i.imgur.com/69UwNcl.png") no-repeat left center;
-	background-position: 10px 5px;
-	border-right: 1px solid #f1f1f1;
-}
-
-.create-acc {
-    display: inline-block;
-    text-align: center;
-    vertical-align: middle;
-    padding: 10px 11px;
-    border: 0px solid #b96529;
-    border-radius: 8px;
-    background: #992828;
-    background: -webkit-gradient(linear, left top, left bottom, from(#e77e33), to(#e77e33));
-    background: -moz-linear-gradient(top, #e77e33, #e77e33);
-    background: linear-gradient(to bottom, #e77e33, #e77e33);
-    font-family: 'Open Sans', sans-serif;
-	font-weight:700;
-    color: #ffffff;
-    text-decoration: none;
-	height: 50px;
-	margin-top: 20px;
-}
-.create-acc:hover,
-.create-acc:focus {
-    border: 0px solid #e77e33;
-    background: #db7830;
-    color: #ffffff;
-    text-decoration: none;
-}
-.create-acc:active {
-    background: #982727;
-    background: -webkit-gradient(linear, left top, left bottom, from(#8b4c1f), to(#e77e33));
-    background: -moz-linear-gradient(top, #8b4c1f, #e77e33);
-    background: linear-gradient(to bottom, #8b4c1f, #e77e33);
-}
-.create-acc:after{
-    content:  "\0000a0";
-    display: inline-block;
-    height: 50px;
-    width: 50px;
-    line-height: 24px;
-    margin: 0 4px -6px -4px;
-    position: relative;
-	padding-left: 10px;
-    top: -10px;
-    right: -15px;
-    background: url("http://i.imgur.com/ZcP5IpD.png") no-repeat center center #db7830;
-    background-size: 8px 11px;
-	-webkit-border-radius: 0px 8px 8px 0px;
-	-moz-border-radius: 0px 8px 8px 0px;
-	-o-border-radius: 0px 8px 8px 0px;
-	-ms-border-radius: 0px 8px 8px 0px;
-	border-radius: 0px 8px 8px 0px;
+    width:67%;
+    padding:15px 15px 15px 8px;
+    border-radius:5px;
+    box-shadow:inset 4px 6px 10px -4px rgba(0,0,0,0.3), 0 1px 1px -1px rgba(255,255,255,0.3);
+    background:rgba(0,0,0,0);
+    @include disable;
+    border:1px solid rgba(0,0,0,1);
+    margin-bottom:10px;
+    color:#ff6600;
+    font-size: 15px;
 }
