--- a/fosssite/templates/fosssite/signup.html
+++ b/fosssite/templates/fosssite/signup.html
@@ -1,6 +1,10 @@
 {% extends 'fosssite/home.html' %}
 {% block profile %}
-<li><a href="{% url 'fosssite:login_user' %}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+<li class="main-nav-link">
+  <a class="nav-link" href="{% url 'fosssite:login_user' %}"><span class="glyphicon glyphicon-log-in"></span> LOGIN</a>
+</li>
+{% endblock %}
+{% block image%}
 {% endblock %}
   {% block content %}
           <div id="wrapper">
@@ -22,10 +26,13 @@
                                       {% endif %}
                                       <input name="email" type="text" placeholder="Email ID" size="40" onClick="border: 1px solid #30a8da;" id="mail"/>
                                       <p class="text-danger">{{ form.password.errors.as_text  }}</p>
-                                      <input name="password" type="password" placeholder="Password" size="40" onClick="border: 1px solid #30a8da;" id="password"/><br>
+                                      <input name="password" type="password" placeholder="Password" size="40" onClick="border: 1px solid #30a8da;" id="password"/>
+                                     <br>
                                       <input name="is_public" type="checkbox"  size="40" onClick="border: 1px solid #30a8da;"/> Make Profile Public<br>
-                                      <button type="submit" class="btn btn-default">Create My Account</button>
-
+                                      <button type="submit" class="btn">Create My Account</button>
+                                      
+                                      
+                                      
                                     </form>
                                 </div>
           </div>
