comming soon image problem solved

--- a/fosssite/templates/fosssite/events.html
+++ b/fosssite/templates/fosssite/events.html
@@ -6,6 +6,9 @@
 {% block acitve3 %}{% endblock %}
 {% block acitve4 %}{% endblock %}
 
+{% block image %}
+{% endblock %}
+
 {% block profile %}
 <li class="main-nav-link"><a class="nav-link" href="{% url 'fosssite:UserFormView'%}"><span class="glyphicon glyphicon-user"></span>SIGN UP</a></li>
 <li class="main-nav-link"><a class="nav-link" href="{% url 'fosssite:login_user' %}"><span class="glyphicon glyphicon-log-in"></span> LOGIN</a></li>
