forntend issues solved

--- a/fosssite/templates/fosssite/blog.html
+++ b/fosssite/templates/fosssite/blog.html
@@ -1,20 +1,8 @@
-{% extends 'fosssite/home.html' %}
+{% extends 'fosssite/base.html' %}
 {% load staticfiles %}
 
-{% block acitve1 %}{% endblock %}
-{% block acitve4 %}class="active"{% endblock %}
-{% block acitve3 %}{% endblock %}
-{% block acitve2 %}{% endblock %}
 
-
-
-{% block profile %}
-<li class="main-nav-link"><a class="nav-link" href="{% url 'fosssite:UserFormView'%}"><span class="glyphicon glyphicon-user"></span>SIGN UP</a></li>
-<li class="main-nav-link"><a class="nav-link" href="{% url 'fosssite:login_user' %}"><span class="glyphicon glyphicon-log-in"></span> LOGIN</a></li>
-{% endblock %}
-{% block image %}
-{% endblock %}
-{% block content %}
+{% block body %}
 
 
 <div class='row'>
