--- a/fosssite/templates/fosssite/working.html
+++ b/fosssite/templates/fosssite/working.html
@@ -1,14 +1,8 @@
-{% extends 'fosssite/home.html' %}
+{% extends 'fosssite/base.html' %}
 {% load staticfiles %}
 
-{% block profile %}
-<li><a href="{% url 'fosssite:profileuser' name=request.user%}"><span class="glyphicon glyphicon-user"></span> Welcome {{ request.user }}</a></li>
-<li><a href="{% url 'fosssite:logout' %}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
-{% endblock %}
-{% block image %}
-{% endblock %}
-{% block content %}
 
+{% block body %}
 
 <div class='row'>
   <div  style="margin-top: 150px;margin-left: 350px;">
