--- a/fosssite/templates/fosssite/changepassword.html
+++ b/fosssite/templates/fosssite/changepassword.html
@@ -1,19 +1,13 @@
-{% extends 'fosssite/home.html' %}
+{% extends 'fosssite/base.html' %}
 {% load staticfiles %}
 
 
-
-{% block profile %}
-<li><a href="{% url 'fosssite:profileuser' name=request.user%}"><span class="glyphicon glyphicon-user"></span> Welcome {{ request.user }}</a></li>
-<li><a href="{% url 'fosssite:logout' %}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
-{% endblock %}
-
-{% block content %}
+{% block body %}
 <div id='main-content' class='container'>
    <div class='row'>
  <div class='col-md-12'>
    <div class='page-header'>
-     <h2>Edit User Profile</h2>
+     <h2>Reset Password</h2>
    </div>
    <div class='page-body'>
      <form accept-charset="UTF-8" action="" class="form" enctype="multipart/form-data" id="edit_user" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="&#x2713;" /><input name="_method" type="hidden" value="put" /><input name="authenticity_token" type="hidden" value="KW/3tAwoPpmq/MzCtU1Eolw7K8jFlTE0QLduKwL8K8U=" /></div>
@@ -39,7 +33,7 @@
                </div>
 
 
-         <input class="btn btn-primary btn-lg" type="submit" value="Update Password"/>
+         <input class="btn btn-info btn-lg" type="submit" value="Update Password"/>
      </div>
  </div>
        </form>
