--- a/fosssite/templates/fosssite/confirm_password.html
+++ b/fosssite/templates/fosssite/confirm_password.html
@@ -1,11 +1,11 @@
-{% extends 'fosssite/home.html' %}
+{% extends 'fosssite/base.html' %}
 
-{% block content %}
+{% block body %}
 <div id='main-content' class='container'>
    <div class='row'>
  <div class='col-md-12'>
    <div class='page-header'>
-     <h2></h2>
+     <h2>Confirm Password</h2>
    </div>
    <div class='page-body'>
      <form accept-charset="UTF-8" action="" class="form" enctype="multipart/form-data" id="edit_user" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="&#x2713;" /><input name="_method" type="hidden" value="put" /><input name="authenticity_token" type="hidden" value="KW/3tAwoPpmq/MzCtU1Eolw7K8jFlTE0QLduKwL8K8U=" /></div>
@@ -33,7 +33,7 @@
                </div>
 
 
-         <input class="btn btn-primary btn-lg" type="submit" value="Change Password"/>
+         <input class="btn btn-success btn-lg" type="submit" value="Change Password"/>
      </div>
  </div>
        </form>
