--- a/fosssite/templates/fosssite/edit_contributions.html
+++ b/fosssite/templates/fosssite/edit_contributions.html
@@ -1,18 +1,13 @@
-{% extends 'fosssite/home.html' %}
+{% extends 'fosssite/base.html' %}
 {% load staticfiles %}
 
-{% block profile %}
-<li><a href="{% url 'fosssite:profileuser' name=request.user%}"><span class="glyphicon glyphicon-user"></span> Welcome {{ request.user }}</a></li>
-<li><a href="{% url 'fosssite:logout' %}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
-{% endblock %}
-{% block image %}
-{% endblock %}
-{% block content %}
+
+{% block body %}
 <div id='main-content' class='container'>
    <div class='row'>
        <div class='col-md-12'>
            <div class='page-header'>
-               <h2>Edit User Profile</h2>
+               <h2>Edit Contributions</h2>
            </div>
            <div class='page-body'>
                <form method="post" >
@@ -25,11 +20,12 @@
                     {% if error %}<p class="text-danger">{{error}}</p>{% endif %}
                     <br/>
                     <div class='row'>
-                      <div class='col-md-6'>
+                      <div class='col-md-8'>
                     {{ contributions_formset.management_form }}
                             {% for contributions_form in contributions_formset %}
 
                                 <div class="link-formset">
+                                    <br>
                                     <div class="form-group">
                                         <label for="ticket">Ticket ID/Issue Number</label>
                                         <input  class="form-control" id="ticket" {{ contributions_form.ticket_id }}
@@ -59,30 +55,27 @@
                                             {{ error|escape }}
                                         {% endfor %}
                                     {% endif %}
+                                    <br>
                                 </div>
-                                </div>
+                                {% endfor %}
+                                <br><br>
+                                <input type="submit" value="Update" class="btn btn-success btn-lg"/>
                                 </div>
                             </div>
-                                <br/>
-                                <br/>
-                            {% endfor %}
-                            <br/>
-                            <br/>
-                            <input type="submit" value="Update Contributions" class="button"/>
-
-                </form>
+                        </form>
+                    </div>
             </div>
         </div>
     </div>
-</div>
+
 
 <!-- Include formset plugin - including jQuery dependency -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="{% static 'jquery.formset.js' %}"></script>
 <script>
     $('.link-formset').formset({
-        addText: 'add link',
-        deleteText: 'remove'
+        addText: 'Add New',
+        deleteText: 'Remove'
     });
 </script>
 {% endblock %}
