--- a/fosssite/templates/fosssite/login.html
+++ b/fosssite/templates/fosssite/login.html
@@ -1,16 +1,8 @@
-{% extends 'fosssite/home.html' %}
+{% extends 'fosssite/base.html' %}
 {%load staticfiles%}
 
-{% block profile %}
-  <li class="main-nav-link">
-    <a class="nav-link" href="{% url 'fosssite:UserFormView'%}">
-    <span class="glyphicon glyphicon-user"></span>SIGN UP</a>
-  </li>
-{% endblock %}
-{%block image%}
-{% endblock %}
 
-{% block content %}
+{% block body %}
 <div id="wrapper">
    <div class="join">
 	 Welcome Back!!
@@ -37,7 +29,7 @@
 				   <input name="password" type="password" placeholder="Password" size="40" onClick="border: 1px solid #30a8da;" id="password"/><br/>
 
 				   <a href="{% url 'fosssite:forgot_password' %}">Forgot Password</a><br/><br/>
-				   <button type="submit" class="btn btn-default">Log In</button>
+				   <button type="submit" class="btn">Log In</button>
 				 </form>
 			   </div>
  </div>
