--- a/fosssite/templates/fosssite/signup_email.html
+++ b/fosssite/templates/fosssite/signup_email.html
@@ -1,7 +1,6 @@
-{% extends 'fosssite/home.html' %}
-{% block image %}
-{% endblock %}
-{% block content %}
+{% extends 'fosssite/base.html' %}
+
+{% block body %}
   <div id="wrapper">
     <div class="join">
       Verify Email Address
@@ -23,7 +22,7 @@
                   <form action="" method="POST">{% csrf_token %}
                     <input name="signup_email" type="text" placeholder="Email" size="40" onClick="border: 1px solid #30a8da;" id="email"/>
                     <br/>
-                    <button type="submit" class="btn btn-default">Verify</button>
+                    <button type="submit" class="btn btn-success btn-lg">Verify</button>
                   </form>
                 </div>
   </div>
