--- a/fosssite/templates/fosssite/home.html
+++ b/fosssite/templates/fosssite/home.html
@@ -106,9 +106,9 @@
   </nav>
 </header>
 {% block image %}
-<div class='image' style="height:500px;" ">
+<div class='image' style="height:450x;" ">
   
-     <img src="{% static 'assets/images/mix-gallery10.jpg' %}" style="width: 100%;"/>
+     <img src="{% static 'assets/images/bg.jpg' %}" style="width: 100%;"/>
   
 </div>
 {% endblock %}
@@ -123,7 +123,14 @@
       </div>
     </div>
       {% endblock %}
+<section id="aboutx" class="module content">
+  <div class="container">
+    <h2 class="center"><i class="material-icons custom_size"></i>About Us</h2>
+    <p id="about-us">As with the previous editions, conf.kde.in is a platform for Qt/KDE contributors, developers and enthusiasts to come together,share their knowledge, contribute, learn and play. Most importantly it's an excellent arena for collaboration and exchange of ideas, skills and thoughts among like minded people passionate about open source in general.<br><br>
 
+conf.kde.in is an awesome opportunity for any student who is passionate to experience the magic of open source. Here you can meet the veterans in open source software development, develop professional connections which , for sure, will help you a great deal in future, chat with student contributors who can guide you , present in front of a grand audience (wow!) and most importantly grasp the essence of open source development. It is indeed a 'never miss' opportunity that will give you a strong foundation to build on!</p>
+  </div>
+</section>
       <div class="push"></div>
     <div class="footer" style="bottom:20px;">
       <div class='container'>
