frontend for mobile configured

--- a/fosssite/templates/fosssite/edituser.html
+++ b/fosssite/templates/fosssite/edituser.html
@@ -46,7 +46,7 @@
              <div class='form-group'>
                <label for="user_name">Add Speakers / Presentation</label><br/><br/>
                <a href="{% url 'fosssite:edit_speakers' name=request.user %}">
-               <button type="button" class="btn btn-success btn-lg">Add Speakers/Presentation</button></a>
+               <button type="button" class="btn btn-success btn-lg">Add Presentation</button></a>
              </div>
              <br/>
              {% if errors %}
