--- a/fosssite/templates/fosssite/base.html
+++ b/fosssite/templates/fosssite/base.html
@@ -95,24 +95,24 @@
   <div class='container'>
     <div class='row'>
       <hr/>
-      <div class='col-md-2'>
+      <div class='col-md-2 col-xs-2'>
         <img alt="fosslnmiit-logo" src="{% static 'assets/foss.png' %}" height="40" width="40" /> <br/>
       </div>
-      <div class='col-md-7'>
+      <div class='col-md-7 col-xs-10'>
               Made with <a href='http://www.django.org' target='_blank' style="color:red">Django</a> with love from <a href="http://www.getbootstrap.com" target='_blank' style="color:red">Twitter Bootstrap</a> &amp; <a href="http://www.bootswatch.com" target='_blank' style="color:red">Bootswatch</a>.
 
       </div>
-      <div class='col-md-3'>
+      <div class='col-md-3 col-xs-6'>
         <div class='row'>
-          <div class='col-md-12'><small><strong>Foss LNMIIT Community</strong></small></div>
-        </div>
+          <div class='col-md-12 col-xs-12'><small><strong >Foss LNMIIT Community</strong></small></div>
+      </div><br>
         <div class='row'>
-          <div class='col-md-12'>
-            <ul class='nav navbar-nav'>
-              <li><a href="http://www.twitter.com/fosslnmiit" target="_blank"><img alt="Twitter" height="40" src="{% static 'assets/twitter.png' %}" width="40" /></a></li>
-              <li><a href="http://www.facebook.com/fosslnmiit" target="_blank"><img alt="Facebook" height="40" src="{% static 'assets/facebook-3.svg' %}" width="40" /></a></li>
-              <li><a href="https://groups.google.com/forum/#!forum/fosslnmiit" target="_blank"><img alt="Group" height="40" src="{% static 'assets/google.png' %}" width="40" /></a></li>
-            </ul>
+          <div class='col-md-12 col-xs-12'>
+
+              <a href="http://www.twitter.com/fosslnmiit" target="_blank"><img alt="Twitter" height="40" src="{% static 'assets/twitter.png' %}" width="40" /></a>
+              <a href="http://www.facebook.com/fosslnmiit" target="_blank"><img alt="Facebook" height="40" src="{% static 'assets/facebook-3.svg' %}" width="40" /></a>
+              <a href="https://groups.google.com/forum/#!forum/fosslnmiit" target="_blank"><img alt="Group" height="40" src="{% static 'assets/google.png' %}" width="40" /></a>
+
           </div>
         </div>
       </div>
