personal website link view changed

--- a/fosssite/templates/fosssite/profileuser.html
+++ b/fosssite/templates/fosssite/profileuser.html
@@ -59,7 +59,7 @@
 						</tr>
 						<tr>
 							<th width='30%'>Website</th>
-							<td>{{userprofile.example}}</td>
+							<td><a href="{{userprofile.example}}">{{userprofile.example}}</a></td>
 						</tr>
 
 				</table>
