lnmiit home page image added

--- a/fosssite/templates/fosssite/working.html
+++ b/fosssite/templates/fosssite/working.html
@@ -3,10 +3,10 @@
 
 
 {% block body %}
-
+<br><br>
 <div class='row'>
-  <div  style="margin-top: 150px;margin-left: 350px;">
-     <img src="{% static 'assets/images/coming_soon.jpg' %}"/>
+  <div style="margin-left: 50px;" >
+     <img src="{% static 'assets/images/coming_soon.jpg' %}" class="img-responsive" alt="Responsive image">
   </div>
 </div>
 
