--- a/fosssite/templates/fosssite/contributions.html
+++ b/fosssite/templates/fosssite/contributions.html
@@ -5,11 +5,17 @@
 
 
 <div class='row'>
-    <div  style="margin-top: 150px;margin-left: 350px;">
-       <img src="{% static 'assets/images/coming_soon.jpg' %}"/>
+    <div class="col-md-12">
+    <div  style="margin-left: 50px;" >
+       <img src="{% static 'assets/images/coming_soon.jpg' %}" class="img-responsive" alt="Responsive image">
     </div>
-  <div  style="margin-top: 150px;margin-left: 350px;">
+</div>
+</div>
+<div class="row">
+    <div class="col-md-12">
+  <div style="margin-left: 100px;">
      <p>Please <a href="{% url 'fosssite:login_user' %}">Login</a> for more info !</p>
+  </div>
   </div>
 </div>
 
