--- a/fosssite/templates/fosssite/home.html
+++ b/fosssite/templates/fosssite/home.html
@@ -14,6 +14,11 @@
           {% endif %}
       </div>
 </div>
+<div class="col-md-12 "  >
+<div >
+  <img src="{% static 'assets/images/bg.jpg' %}" class="img-responsive" alt="Responsive image">
+</div>
+</div>
 </div>
 
 
