Page responsive for small screen

--- a/fosssite/templates/fosssite/base.html
+++ b/fosssite/templates/fosssite/base.html
@@ -15,7 +15,7 @@
 {% block jsfile %}{% endblock %}
 </head>
 <body>
-    <div class="experiment">
+    <div class="experiment container-fluid">
         <nav class="navbar navbar-default"></nav> <!-- Dummy nav bar -->
 <nav class="navbar navbar-default navbar-fixed-top " role="navigation" >
   <div class="container-fluid">
